Bug #15010: Secure ApplicationController.getApplicationsFromUi